--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>My first site</title>
 </head>
 <body>
-Everything will be ok! Just believe and work hard!!
+Everything will be ok! Just believe and work hard!!!
 </body>
 </html>
