--- a/index.html
+++ b/index.html
@@ -1,9 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My first site</title>
+	<title>Homework</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-Everything will be ok! Just believe and work hard!!!
+	<div id="container">
+		<div id="header">
+			Curriculum vitae
+		</div>
+		<div id="body">
+			<div id="left-side">
+				<div>
+					<img class="img" src="cat.jpg" alt="Котофей Котофеич">
+				</div>
+				<div id="name-div">
+					<p class="left-side-div">Котофей</p>
+					<p class="left-side-div">Котофеич</p>
+				</div>
+				<div>
+					<p class="left-side-p">Люблю:</p>
+				</div>
+				<div id="left-menu-item1" class="left-menu-items">
+					Сметанку
+				</div>
+				<div id="left-menu-item2" class="left-menu-items">
+					Молочко
+				</div>
+				<div id="left-menu-item3" class="left-menu-items">
+					Пивасик
+				</div>
+				<div>
+					<p class="left-side-p">Контакты</p>
+				</div>
+				<div>
+					<ul>
+						<li><a href="http://vk.com">Vk</a></li>
+						<li><a href="http://odnoklassniki.ru">Ok</a></li>
+						<li><a href="http://facebook.com">Facebook</a></li>
+					</ul>
+				</div>
+			</div>
+			<div id="right-side">
+				<div class="right-side-div">
+					<p class="title-text">Дата рождения:</p>	
+					<p>1 января 2000г</p>	
+					<p class="title-text">Место рождения:</p>	
+					<p>теплая печка</p>	
+				</div>
+				<div class="right-side-div">
+					<p class="title-text">Soft skills:</p>	
+					<p>- Photoshop</p>	
+					<p>- Word</p>	
+					<p>- Paint</p>	
+				</div>
+				<div class="right-side-div">
+					<p class="title-text">Обо мне:	</p>
+					<p>- не курю</p>
+					<p>- пью</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
