--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div class="right-side-div">
 					<p class="title-text">Обо мне:	</p>
 					<p>- не курю</p>
-					<p>- пью</p>
+					<p>- не пью</p>
 				</div>
 			</div>
 		</div>
